<resources>
    <string name="app_name">EstrellaBet</string>
    <string name="exercise">Exercise</string>
    <string name="next_exercise">Next Exercise</string>
    <string name="home">Home</string>
    <string name="sport_centers">Sport Centers</string>
    <string name="explore">Explore</string>
    <string name="top_sport_center">Top Sport Center</string>
    <string name="discover_our_top_workouts">Discover our top workouts</string>
    <string name="categories">Categories</string>
    <string name="onboarding">You have a unique chance to test your logic and intuition, and maybe your knowledge! Choose a match and try to guess the outcome. If you can\'t choose a match by yourself, our great random function does it for you!</string>
</resources>